# idea-api

./: Cargo.toml
.sqlx/: query-545696f455291afedc0a3e8c920354f31223b3757228b270df1d291f8559753b.json  query-b8252290dccc027417e10b9aa452f8cc3a9a2b71132e48d4586a33028b11113d.json
migrations/: 20230815194606_create_users_table.sql
src/: main.rs  startup.rs
src/domain/auth/: mod.rs  signup.rs
src/domain/users/: create_user.rs  mod.rs  user.rs
src/routes/: mod.rs
src/routes/auth/: mod.rs  register.rs  sign_in.rs  sign_out.rs
src/routes/board/: create_board.rs  delete_board.rs  list_boards.rs  mod.rs  show_board.rs  update_board.rs
src/routes/idea/: create_idea.rs  delete_idea.rs  list_ideas.rs  mod.rs  show_idea.rs  update_idea.rs
src/routes/profile/: mod.rs  show_profile.rs  update_profile.rs
