[package]
name = "idea-api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "idea-api"

[dependencies]
axum = {version = "0.6.18", features = ["tracing"]}
shuttle-axum = "0.23.0"
shuttle-runtime = "0.23.0"
tokio = "1.28.2"
tower-http = { version = "0.4.3", features = ["trace"] }
tracing = "0.1.37"
